--- a/app/views/form.html
+++ b/app/views/form.html
@@ -1,5 +1,17 @@
 <div class="container">
-    <form action="/App/Index" method="POST">
-
-    </form>
+    <div class="row">
+        <div class="panel panel-primary">
+            <div class="panel-heading">Information</div>
+            <div class="panel-body">
+                <form action="/App/Index" method="GET">
+                    <div class="form-group">
+                        <label>UserID</label>
+                        <input type="text" class="form-control" placeholder="UserID" name="user" value=""><br>
+                        <label>Rivals</label>
+                        <input type="text" class="form-control" placeholder="UserID,UserID,UserID" name="rivals" value="">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
