--- a/app/views/App/Index.html
+++ b/app/views/App/Index.html
@@ -1,1 +1,1 @@
-{{set . "title" "Home"}} {{template "header.html" .}} {{template "form.html" .}} {{template "footer.html" .}}
+{{set . "title" "Home"}} {{template "header.html" .}} {{template "form.html" .}} {{template "result.html" .}} {{template "footer.html" .}}
