--- a/app/views/form.html
+++ b/app/views/form.html
@@ -8,7 +8,10 @@
                         <label>UserID</label>
                         <input type="text" class="form-control" placeholder="UserID" name="user" value=""><br>
                         <label>Rivals</label>
-                        <input type="text" class="form-control" placeholder="UserID,UserID,UserID" name="rivals" value="">
+                        <input type="text" class="form-control" placeholder="UserID,UserID,UserID" name="rivals" value=""><br>
+                        <div class="btn-group pull-right">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                        </div>
                     </div>
                 </form>
             </div>
