--- a/app/views/form.html
+++ b/app/views/form.html
@@ -3,7 +3,7 @@
         <div class="panel panel-primary">
             <div class="panel-heading">Information</div>
             <div class="panel-body">
-                <form action="/App/Index" method="GET">
+                <form action="/" method="GET">
                     <div class="form-group">
                         <label>UserID</label>
                         <input type="text" class="form-control" placeholder="UserID" name="user" value=""><br>
